--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
     <link rel="stylesheet" href="style.css">
     <title>DESAFIO HTML CSS</title>
 </head>
 <body>
-    <header>
-
-    </header>
 
     <main>
         <section id="container">
             <div id="title-page">
-                <p class="headline">Sua próxima viagem</p>
+                <p class="headline">Sua próxima viagem:</p>
                 <h1 class="title">Conheça Busan</h1>
             </div>
 
@@ -28,10 +27,10 @@
                 </p>
             </div>
 
-            <hr>
+          <hr class="division" />
 
             <section id="content-list">  
-
+                <hr class="division">    
                 <div id="title-list">
 
                     <p class="headline">para os asmantes de historia</p>
@@ -44,9 +43,48 @@
 
                 <div id="list">
                     
+                    <div class="card-travel">
+                        <img src="./assets/Image_02.png" alt="Templo Headong Younggungsa">
+                        <h1 class="title">1. Templo Headong Younggungsa</h1>
+                        <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
+                        <p>Bom para:</p>
+                        <ul>
+                            <li>Historia</li>
+                        </ul>
+                    </div>
+                    <div class="card-travel">
+                        <img src="./assets/Image_03.png" alt="Templo Beomeo-sa">
+                        <h1 class="title">2. Templo Beomeo-sa</h1>
+                        <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. </p>
+                        <p>Bom para:</p>
+                        <ul>
+                            <li>Historia</li>
+                        </ul>
+                    </div>
+                    <div class="card-travel">
+                        <img src="./assets/Image_04.png" alt="Parque Yongdusan">
+                        <h1 class="title">3. Parque Yongdusan</h1>
+                        <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. </p>
+                        <p>Bom para:</p>
+                        <ul>
+                            <li>Casais</li>
+                            <li>Familias</li>
+                            <li>Orcamento</li>
+                        </ul>
+                    </div>
                 </div>
-         
+                <hr class="division">
+
+                <div class="description-img">
+                    <p>
+                        As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
+                    </p>
+                </div>
             </section>
+
+            <footer>
+                Feito com  <i class="ph-fill ph-heart"></i>pela Rocketseat
+            </footer>
 
 
 
