--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <img src="./assets/Image_02.png " class="list-img" alt="Templo Headong Younggungsa">
                         <h1 class="title">1. Templo Headong Younggungsa</h1>
                         <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
-                        <p>Bom para:</p>
+                        <strong>Bom para: </strong>
                         <ul>
-                            <li>  <a href="http://">Historia</a></li>
+                            <li>  <a id="historia" href="http://">Historia</a></li>
                         </ul>
                     </div>
                     <div class="card-travel">
@@ -55,7 +55,7 @@
                         <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. </p>
                         <strong>Bom para: </strong>
                         <ul>
-                            <li> <a href="http://">Historia</a></li>
+                            <li> <a id="historia" href="http://">Historia</a></li>
                         </ul>
                     </div>
                     <div class="card-travel">
@@ -63,14 +63,14 @@
                         <h1 class="title">3. Parque Yongdusan</h1>
                         <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. </p>
                        <strong>Bom para: </strong>
-                        <ul>
-                            <li> <a href="http://">Casais</a></li>
-                            <li> <a href="http://">Familias</a></li>
-                            <li> <a href="http://">Orcamento</a></li>
+                        <ul id="lista-recomendado">
+                            <li> <a id="casais" href="http://">Casais</a></li>
+                            <li> <a id="familias" href="http://">Familias</a></li>
+                            <li> <a id="orcamento" href="http://">Orcamento</a></li>
                         </ul>
                     </div>
               
-                <hr>
+                <hr class="">
 
                 <div class="description-img">
                     <p>
@@ -80,7 +80,7 @@
             </section>
 
             <footer>
-                Feito com  <i class="ph-fill ph-heart"></i>pela Rocketseat
+                Feito com <i class="ph-fill ph-heart"></i> pela Rocketseat
             </footer>
         </section>
     </main>
